# Kaggle

./: .gitignore  pyproject.toml
algorithms/: classifications.py
challenges/kobe/: data_small.csv  kobe.py
challenges/titanic/: submission.csv  titanic.py
kobe/: data_small.csv  kobe.py
sms-spam-collection-dataset/: README.md  data_processing.py  main.py  naive_bayes.py  util.py
titanic/: best_model.pt  data_processing.py  main.py  model.py  training.py
utils/: csv_parser.py  csv_parser_test.py  pandas_utils.py  pandas_utils_test.py  schema_inferencer.py  schema_inferencer_test.py
utils/testdata/: csv_parser_test.csv  schema_inferencer_test.csv
visulization/: histogram.py  histogram_test.py
