[project]
name = "kaggle-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "kaggle>=1.7.4.5",
    "kagglehub[pandas-datasets]>=1.0.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch<=2.2.2",
    "transformers>=5.8.1",
]
