[project]
name = "kaggle-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "duckdb>=1.5.3",
    "jaxtyping>=0.3.7",
    "kaggle>=1.7.4.5",
    "kagglehub[pandas-datasets]>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch<=2.2.2",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]
